update css using autoprefixer

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,15 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 /*-----------------------Basic Setup------------*/
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 html {
@@ -121,6 +129,16 @@ input[type="button"] {
 
 /*-----------------------------Header Session-----------------------------------*/
 header {
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.7)),
+      to(rgba(0, 0, 0, 0.7))
+    ),
+    url("img/home.jpg");
+  background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("img/home.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("img/home.jpg");
   background-attachment: fixed;
@@ -133,6 +151,8 @@ header {
   position: absolute;
   left: 50%;
   top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 /*-------------------Header Nav----------------------*/
@@ -192,10 +212,16 @@ header {
   opacity: 70%;
   width: 100%;
   height: auto;
+  -webkit-transform: scale(1.15);
+  -ms-transform: scale(1.15);
   transform: scale(1.15);
+  -webkit-transform: transform 0.5s, opacity 0.5s, scale(0.5s);
+  -ms-transform: transform 0.5s, opacity 0.5s, scale(0.5s);
   transform: transform 0.5s, opacity 0.5s, scale(0.5s);
 }
 .meal-photo img:hover {
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
   transform: scale(1.05);
   opacity: 1;
 }
@@ -287,6 +313,8 @@ header {
   text-decoration: none;
   padding-bottom: 2px;
   border-bottom: 1px solid transparent;
+  -webkit-transition: border-bottom 0.2s, color 0.2s;
+  -o-transition: border-bottom 0.2s, color 0.2s;
   transition: border-bottom 0.2s, color 0.2s;
 }
 .city-twitter:hover,
@@ -296,6 +324,16 @@ header {
 }
 /*-----------------------------Testimonial Section-------------*/
 .section-testimonials {
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.8)),
+      to(rgba(0, 0, 0, 0.8))
+    ),
+    url("E:/omnifood/resources/img/background.jpg");
+  background-image: -o-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("E:/omnifood/resources/img/background.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url("E:/omnifood/resources/img/background.jpg");
   background-size: cover;
@@ -345,6 +383,7 @@ cite img {
   width: 90%;
   margin-left: 5%;
   border-radius: 5px;
+  -webkit-box-shadow: 0 2px 2px #e6e0e0;
   box-shadow: 0 2px 2px #e6e0e0;
 }
 .plan-box div {
