--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -87,9 +87,7 @@
     width: 100%;
     margin: 0 0 4% 0;
   }
-  .main-nav {
-    display: none;
-  }
+
   .long-para {
     width: 100%;
     margin-left: 0;
@@ -132,6 +130,23 @@
   }
   .social-links {
     padding-top: 20px;
+  }
+  .mobile-nav-icon {
+    display: inline-block;
+  }
+  .main-nav {
+    float: left;
+    margin: 15px 0 0 100px;
+  }
+  .main-nav li {
+    display: block;
+  }
+  .main-nav li a:link,
+  .maing-nav li a:visited {
+    display: block;
+    border: 0;
+    padding: 10px 0;
+    font-size: 100%;
   }
 }
 
